implement events and yelling
