# server/dungeonsandtrolls/handlers/equip.go
@@ -1,0 +1,17 @@
+package handlers
+
+import (
+	"fmt"
+	"github.com/gdg-garage/dungeons-and-trolls/server/dungeonsandtrolls"
+	"github.com/gdg-garage/dungeons-and-trolls/server/dungeonsandtrolls/api"
+	"github.com/gdg-garage/dungeons-and-trolls/server/dungeonsandtrolls/gameobject"
+)
+
+func Equip(game *dungeonsandtrolls.Game, item *api.Item, player *gameobject.Player) {
+	equipEvent := api.Event_EQUIP
+	game.LogEvent(&api.Event{
+		Type: &equipEvent,
+		Message: fmt.Sprintf("Character %s (%s) equipped item %s (%s)",
+			player.Character.Id, player.Character.Name, item.Id, item.Name)})
+	player.Equip(item)
+}
